// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TMS/Buttons Default Bookmark Button 1`] = `
<button
  className="sc-bdfBQB jwyqxD"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Marked Bookmark Button 1`] = `
<button
  className="sc-bdfBQB hoVnRM"
  type="button"
/>
`;

exports[`Storyshots TMS/Buttons Search Button 1`] = `
<button
  className="sc-gsTEea cOhArm"
  onClick={[Function]}
  type="button"
>
  Искать
</button>
`;

exports[`Storyshots TMS/Buttons Test Button 1`] = `
<button
  className="sc-gsTEea hancQJ"
  onClick={[Function]}
  type="button"
>
  Test Button
</button>
`;

exports[`Storyshots TMS/Filters Closed Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Курс разработки
  </div>
  <div
    className="sc-pGacB dstOjI"
  >
    <div
      className="sc-kEjbQP fGgwSW"
    >
      Все курсы
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Closed Selected Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Возраст
  </div>
  <div
    className="sc-pGacB dstOjI"
  >
    <div
      className="sc-kEjbQP fGgwSW"
    >
      Любой
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Курс разработки
  </div>
  <div
    className="sc-pGacB INRxT"
  >
    <div
      className="sc-kEjbQP cvqIdf"
    >
      Все курсы
    </div>
    <div
      className="sc-iqHYmW bdsSrN"
    >
      <button
        className="sc-crrszt ioLsEV"
      >
        Отменить все
      </button>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="Front end"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="Front end"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        Front end
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="Java"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="Java"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        Java
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="Python"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="Python"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        Python
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="iOS"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="iOS"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        iOS
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Selected Filter 1`] = `
<div
  className="sc-fubCzh"
>
  <div
    className="sc-jrAFXE enEsNx"
  >
    Возраст
  </div>
  <div
    className="sc-pGacB INRxT"
  >
    <div
      className="sc-kEjbQP cvqIdf"
    >
      Любой
    </div>
    <div
      className="sc-iqHYmW bdsSrN"
    >
      <button
        className="sc-crrszt ioLsEV"
      >
        Отменить все
      </button>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="меньше 18"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="меньше 18"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        меньше 18
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="18-30"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="18-30"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        18-30
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="30-45"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="30-45"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        30-45
      </label>
      <label
        className="sc-gKseQn peujJ sc-dQoVA eFyOQJ"
        htmlFor="больше 45"
      >
        <input
          checked={true}
          className="sc-iBPTik eCxJlT"
          id="больше 45"
          type="checkbox"
        />
        <div
          className="sc-jSgvzq bJOvsl"
        />
        больше 45
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Inputs Default Input 1`] = `
<label
  className="sc-kstqJO kTnZJY"
>
  <span
    className="sc-hBEYId jrglmu"
  >
    E-mail
  </span>
  <input
    className="sc-bqyKOL ehFbLO"
    placeholder="Введите e-mail"
    type="email"
  />
</label>
`;

exports[`Storyshots TMS/Inputs Invalid Input 1`] = `
<label
  className="sc-kstqJO kTnZJY"
>
  <span
    className="sc-hBEYId vWLEl"
  >
    Некорректный e-mail
  </span>
  <input
    className="sc-bqyKOL gwTpaH"
    placeholder="Введите e-mail"
    type="email"
    value="ivan@teachmeskills.com"
  />
</label>
`;

exports[`Storyshots TMS/LoginForm Login Correct 1`] = `
<div
  className="sc-iJuVqt ijIZBw"
>
  <div
    className="sc-giImIA dopqdC"
  />
  <div
    className="sc-ezredP"
  >
    <h2
      className="sc-bYEvvW eMeZlo"
    >
      Авторизация
    </h2>
    <p
      className="sc-kLgnNl dExAPH"
    >
      Неверное имя пользователя или пароль
    </p>
    <label
      className="sc-kstqJO kTnZJY sc-iktFfs vhxta"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Email
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите e-mail"
        type="email"
        value=""
      />
    </label>
    <label
      className="sc-kstqJO kTnZJY sc-iktFfs vhxta"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Пароль
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите пароль"
        type="password"
        value=""
      />
    </label>
    <label
      className="sc-gKseQn peujJ sc-jJEKmz eoGljO"
    >
      <input
        checked={true}
        className="sc-iBPTik eCxJlT"
        type="checkbox"
      />
      <div
        className="sc-jSgvzq bJOvsl"
      />
      Оставаться в системе на этом устройстве
    </label>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Войти в систему
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/LoginForm Login Incorrect 1`] = `
<div
  className="sc-iJuVqt ijIZBw"
>
  <div
    className="sc-giImIA dopqdC"
  />
  <div
    className="sc-ezredP"
  >
    <h2
      className="sc-bYEvvW eMeZlo"
    >
      Авторизация
    </h2>
    <label
      className="sc-kstqJO kTnZJY sc-iktFfs vhxta"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Email
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите e-mail"
        type="email"
        value=""
      />
    </label>
    <label
      className="sc-kstqJO kTnZJY sc-iktFfs vhxta"
    >
      <span
        className="sc-hBEYId jrglmu"
      >
        Пароль
      </span>
      <input
        className="sc-bqyKOL ehFbLO"
        onChange={[Function]}
        placeholder="Введите пароль"
        type="password"
        value=""
      />
    </label>
    <label
      className="sc-gKseQn peujJ sc-jJEKmz eoGljO"
    >
      <input
        className="sc-iBPTik eCxJlT"
        type="checkbox"
      />
      <div
        className="sc-jSgvzq bJOvsl"
      />
      Оставаться в системе на этом устройстве
    </label>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Войти в систему
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/NavbarMenu Navbar 1`] = `
<nav
  className="sc-bBrNTY fEfgRz"
>
  <div
    className="sc-cOajNj jBakvd"
  />
  <ul
    className="sc-Azgjq iOQpxg"
  >
    <li
      className="sc-khAkCZ kqFjbb"
    >
      <a
        className="sc-hTZgZg kwwhaY"
        href="/resumes"
      >
        Резюме
      </a>
    </li>
    <li
      className="sc-khAkCZ kqFjbb"
    >
      <a
        className="sc-hTZgZg kwwhaY"
        href="/responses"
      >
        Отклики
      </a>
    </li>
    <li
      className="sc-khAkCZ kqFjbb"
    >
      <a
        className="sc-hTZgZg kwwhaY"
        href="/bookmarks"
      >
        Избранное
      </a>
    </li>
  </ul>
  <div
    className="sc-jgHCSr wULtm"
  >
    <div
      className="sc-eggMyH cPNZaq sc-gTgzoy fkeapS"
    >
      <div
        className="sc-fodVek bRbfIZ"
        onClick={[Function]}
      />
    </div>
    <div
      className="sc-iBaQBe eBOhyC"
    >
      <div
        className="sc-dIUeWJ gLCjTF sc-dmlqKv sc-iUuxjF iueIgU ckDSAh"
        onClick={[Function]}
      >
        <p
          className="sc-hHfuMS fCzkIl"
        >
          ИИ
        </p>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Empty 1`] = `
<div
  className="sc-fodVek hRPeSD"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter One 1`] = `
<div
  className="sc-fodVek bRbfIZ"
/>
`;

exports[`Storyshots TMS/NotificationCounters Notification Counter Two 1`] = `
<div
  className="sc-fodVek UxbVE"
/>
`;

exports[`Storyshots TMS/Notifications Notifications Empty 1`] = `
<div
  className="sc-eggMyH cPNZaq"
>
  <div
    className="sc-fodVek hRPeSD"
  />
  <div
    className="sc-hiSbEG kODxPY sc-cTkxnA ehBwGw"
  >
    <ul
      className="sc-jNMcJZ bAgmWu"
    >
      <li
        className="sc-dOSRxR fNLiMw"
      >
        "У вас нет новых уведомлений"
      </li>
    </ul>
    <div
      className="sc-gWHigU bsjDqX"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications One 1`] = `
<div
  className="sc-eggMyH cPNZaq"
>
  <div
    className="sc-fodVek bRbfIZ"
  />
  <div
    className="sc-hiSbEG kODxPY sc-cTkxnA ehBwGw"
  >
    <ul
      className="sc-jNMcJZ bAgmWu"
    >
      <li
        className="sc-dOSRxR fNLiMw"
      >
        "У вас 5 новых приглашений"
      </li>
    </ul>
    <div
      className="sc-gWHigU bsjDqX"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Notifications Notifications Two 1`] = `
<div
  className="sc-eggMyH cPNZaq"
>
  <div
    className="sc-fodVek UxbVE"
  />
  <div
    className="sc-hiSbEG kODxPY sc-cTkxnA ehBwGw"
  >
    <ul
      className="sc-jNMcJZ bAgmWu"
    >
      <li
        className="sc-dOSRxR fNLiMw"
      >
        "У вас 59 новых приглашений"
      </li>
      <li
        className="sc-dOSRxR fNLiMw"
      >
        "У вас 63 новых ответов"
      </li>
      <li
        className="sc-dOSRxR fNLiMw"
      >
        "У вас 27 новых отказов"
      </li>
    </ul>
    <div
      className="sc-gWHigU bsjDqX"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/Search Input Search 1`] = `
<div
  className="sc-fFucqa kXEENg"
>
  <input
    className="sc-bkzYnD dorCSu"
    placeholder="search"
    type="search"
  />
  <div
    className="sc-idOiZg cVPmFa"
  />
</div>
`;

exports[`Storyshots TMS/Search Search Closed 1`] = `
<div
  className="sc-laRQdt LYCPl"
>
  <div
    className="sc-iNqMzA jbsa-dV"
  >
    <div
      className="sc-fFucqa kXEENg"
    >
      <input
        className="sc-bkzYnD dorCSu"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-idOiZg cVPmFa"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-higWrZ gCWrlF"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/Search Search Opened 1`] = `
<div
  className="sc-laRQdt LYCPl"
>
  <div
    className="sc-iNqMzA dhvzFz"
  >
    <div
      className="sc-fFucqa kXEENg"
    >
      <input
        className="sc-bkzYnD dorCSu"
        placeholder="Поиск"
        type="search"
      />
      <div
        className="sc-idOiZg cVPmFa"
      />
    </div>
    <button
      className="sc-gsTEea cOhArm sc-higWrZ dQSBiq"
      type="button"
    >
      ФИЛЬТРЫ
    </button>
    <button
      className="sc-gsTEea cOhArm"
      type="button"
    >
      Искать
    </button>
  </div>
  <div
    className="sc-jeGTLq lbojpg"
  >
    <ul
      className="sc-eJMPIT cXFUXu"
    >
      <li
        className="sc-nFqVA"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Курс разработки
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Все курсы
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-nFqVA"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Оценка диплома
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Все оценки
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-nFqVA"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Возраст
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Любой
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-nFqVA"
      >
        <div
          className="sc-fubCzh"
        >
          <div
            className="sc-jrAFXE enEsNx"
          >
            Английский язык
          </div>
          <div
            className="sc-pGacB dstOjI"
          >
            <div
              className="sc-kEjbQP fGgwSW"
              onClick={[Function]}
            >
              Любой уровень
            </div>
          </div>
        </div>
      </li>
    </ul>
    <button
      className="sc-gsTEea cOhArm sc-higWrZ sc-ehSDrC dQSBiq ffvWOM"
      type="button"
    >
      СКРЫТЬ ФИЛЬТРЫ
    </button>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Marked 1`] = `
<div
  className="sc-hOqruk gvISJi"
>
  <div
    className="sc-dtwnrN kbyxjL"
  >
    <div
      className="sc-jUEmfL bERnWd"
    />
    <div
      className="sc-dacGJm jSVyqu"
    >
      <div
        className="sc-jQbJRc dDabRu"
      >
        <h2
          className="sc-fvhFOF oEtQC"
        >
          Роман
           
          Шашков
        </h2>
        <p
          className="sc-fbNZge bUFhYZ"
        >
          Python Developer
          , 25 лет
        </p>
      </div>
      <div
        className="sc-GTVdH ekNtzf"
      >
        <button
          className="sc-gsTEea cOhArm sc-gsxoIA bIpIpG"
          type="button"
        >
          Пригласить
        </button>
        <button
          className="sc-bdfBQB hoVnRM"
          type="button"
        />
      </div>
    </div>
  </div>
  <ul
    className="sc-bXDkGd hUDqMu"
  >
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          КУРС | ОЦЕНКА
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <div
            className="sc-dlfnuX jEwccD"
          >
            <div
              className="sc-hKgJUU exSYKH"
            >
              Back End
            </div>
            <div
              className="sc-eCstlR jmBBBx"
            >
              8
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          ДИПЛОМ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <a
            className="sc-GqePz fkiDFj"
            href="https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /"
          >
            https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /
          </a>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          ОТ ШКОЛЫ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <p
            className="sc-fbkiRW jHBJrV"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          НАВЫКИ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <ul
            className="sc-fWSDcn kZOHvl"
          >
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                HTML
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                CSS
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                SPA
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                React
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                NPM
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                Webpack
              </div>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          ОБРАЗОВАНИЕ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <ul
            className="sc-jHVedQ czFHUu"
          >
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Неоконченное высшее образование
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                 БГУИР ИИТ. Компьютерных технологий, Вычислительные машины, системы и сети
              </p>
            </li>
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Английский язык
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                Intermediate
              </p>
            </li>
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Дополнительное образование
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                Школа программирования &lt;TeachMeSkills/&gt;
              </p>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          О СТУДЕНТЕ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <p
            className="sc-fbkiRW jHBJrV"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          КОНТАКТЫ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <ul
            className="sc-jHVedQ czFHUu"
          >
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Город
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                Минск
              </p>
            </li>
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Способ связи
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                375 29 000-00-00
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                ivan@teachmeskills@com
              </p>
            </li>
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Социальные сети
              </p>
              <ul
                className="sc-eLgNKc cSlBzW"
              >
                <li
                  className="sc-bTvSiT GlkPH"
                >
                  <a
                    className="sc-kIeSZW bURVQd"
                    href="https://dfg"
                    name="facebook"
                  />
                </li>
                <li
                  className="sc-bTvSiT GlkPH"
                >
                  <a
                    className="sc-kIeSZW jKrdQZ"
                    href="https://dfg"
                    name="instagram"
                  />
                </li>
                <li
                  className="sc-bTvSiT GlkPH"
                >
                  <a
                    className="sc-kIeSZW cZjWDr"
                    href="https://dfg"
                    name="linkedin"
                  />
                </li>
                <li
                  className="sc-bTvSiT GlkPH"
                >
                  <a
                    className="sc-kIeSZW iSqiQg"
                    href="https://dfg"
                    name="vk"
                  />
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TMS/StudentCV Student CV Not Marked 1`] = `
<div
  className="sc-hOqruk gvISJi"
>
  <div
    className="sc-dtwnrN kbyxjL"
  >
    <div
      className="sc-jUEmfL bERnWd"
    />
    <div
      className="sc-dacGJm hDmaIe"
    >
      <div
        className="sc-jQbJRc dDabRu"
      >
        <h2
          className="sc-fvhFOF oEtQC"
        >
          Иван
           
          Иванов
        </h2>
        <p
          className="sc-fbNZge bUFhYZ"
        >
          Java Developer
        </p>
      </div>
      <div
        className="sc-GTVdH ekNtzf"
      >
        <button
          className="sc-gsTEea cOhArm sc-gsxoIA bIpIpG"
          type="button"
        >
          Пригласить
        </button>
        <button
          className="sc-bdfBQB jwyqxD"
          type="button"
        />
      </div>
    </div>
  </div>
  <ul
    className="sc-bXDkGd hUDqMu"
  >
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          КУРС | ОЦЕНКА
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <div
            className="sc-dlfnuX jEwccD"
          >
            <div
              className="sc-hKgJUU exSYKH"
            >
              Front End
            </div>
            <div
              className="sc-eCstlR jmBBBx"
            >
              10
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          ДИПЛОМ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <a
            className="sc-GqePz fkiDFj"
            href="https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /"
          >
            https://Lorem ipsum dolor sit amet-consectetuer adipiscing elit/Aenean commodo ligula eget dolor0Aenean massa-Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus /
          </a>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          ОТ ШКОЛЫ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <p
            className="sc-fbkiRW jHBJrV"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          НАВЫКИ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <ul
            className="sc-fWSDcn kZOHvl"
          >
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                HTML
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                CSS
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                SPA
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                React
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                NPM
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                Webpack
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                Java SE
              </div>
            </li>
            <li
              className="sc-dwfUuu iyNHoK"
            >
              <div
                className="sc-fKFxtB hZUaLh sc-TmdmN jPpbHy"
              >
                My SQL
              </div>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          ОБРАЗОВАНИЕ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <ul
            className="sc-jHVedQ czFHUu"
          >
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Неоконченное высшее образование
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                 БГУИР ИИТ. Компьютерных технологий, Вычислительные машины, системы и сети
              </p>
            </li>
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Английский язык
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                Upper intermediate
              </p>
            </li>
            <li
              className="sc-aemIz fCAxPM"
            >
              <p
                className="sc-jONnzC eJeZNt"
              >
                Дополнительное образование
              </p>
              <p
                className="sc-hlTwrV cQyqAR"
              >
                Школа программирования &lt;TeachMeSkills/&gt;
              </p>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          О СТУДЕНТЕ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          <p
            className="sc-fbkiRW jHBJrV"
          >
            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
          </p>
        </div>
      </div>
    </li>
    <li
      className="sc-eGCaLh fRFXzq"
    >
      <div
        className="sc-lcuiOb OLNoo"
      >
        <p
          className="sc-gGmKaI fGZBEk"
        >
          КОНТАКТЫ
        </p>
        <div
          className="sc-clsFYl jdPyEK"
        >
          Контакты студента станут вам доступны после принятия вашего приглашения.
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TMS/StudentImages Image In Circle 1`] = `
<div
  className="sc-dIUeWJ cHenSq sc-dmlqKv ljCwyN"
/>
`;

exports[`Storyshots TMS/StudentImages Image On Card 1`] = `
<div
  className="sc-dIUeWJ cHenSq"
/>
`;

exports[`Storyshots TMS/StudentImages No Image In Circle 1`] = `
<div
  className="sc-dIUeWJ gLCjTF sc-dmlqKv iueIgU"
>
  <p
    className="sc-hHfuMS fCzkIl"
  >
    ЗФ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentImages No Image On Card 1`] = `
<div
  className="sc-dIUeWJ gLCjTF"
>
  <p
    className="sc-hHfuMS fCzkIl"
  >
    ИИ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card 1`] = `
<div
  className="sc-ctaXho iBBhbz"
>
  <div
    className="sc-dIUeWJ gLCjTF"
  >
    <p
      className="sc-hHfuMS fCzkIl"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-bsipwG hxnyqx"
  >
    <h3
      className="sc-euMpEg tMeYr"
    >
      Иван
       
      Иванов
    </h3>
    <p
      className="sc-fHuLxr jNrPBd"
    >
      Java Developer
    </p>
    <div
      className="sc-dtTHTy effJaL"
    >
      <div
        className="sc-kfzBvY btInxJ"
      >
        Front End
      </div>
      <div
        className="sc-kfzBvY jnSIkd"
      >
        Лучший ученик
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card Active 1`] = `
<div
  className="sc-ctaXho jMQFbA"
>
  <div
    className="sc-dIUeWJ cHenSq"
  />
  <div
    className="sc-bsipwG hxnyqx"
  >
    <h3
      className="sc-euMpEg tMeYr"
    >
      Роман
       
      Шашков
    </h3>
    <p
      className="sc-fHuLxr jNrPBd"
    >
      Python Developer
      , 25 лет
    </p>
    <div
      className="sc-dtTHTy effJaL"
    >
      <div
        className="sc-kfzBvY btInxJ"
      >
        Back End
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course And Score Tag 1`] = `
<div
  className="sc-dlfnuX jEwccD"
>
  <div
    className="sc-hKgJUU exSYKH"
  >
    Front End
  </div>
  <div
    className="sc-eCstlR jmBBBx"
  >
    10
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course Tag 1`] = `
<div
  className="sc-fKFxtB hZUaLh"
>
  Front End
</div>
`;

exports[`Storyshots TMS/Tags Small Best Student Tag 1`] = `
<div
  className="sc-kfzBvY jnSIkd"
>
  Лучший ученик
</div>
`;

exports[`Storyshots TMS/Tags Small Course Tag 1`] = `
<div
  className="sc-kfzBvY btInxJ"
>
  Front End
</div>
`;

exports[`Storyshots TMS/UserMenu Drop Down Menu 1`] = `
<div
  className="sc-iBaQBe eBOhyC"
>
  <div
    className="sc-dIUeWJ gLCjTF sc-dmlqKv sc-iUuxjF iueIgU ckDSAh"
  >
    <p
      className="sc-hHfuMS fCzkIl"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-hiSbEG kODxPY sc-cBNeex iCzQdO"
  >
    <div
      className="sc-citxvW cLftOi"
    >
      Иван
       
      Иванов
    </div>
    <ul
      className="sc-jcVcSv hKlawc"
    >
      <li
        className="sc-bZSRNg gnolpL"
      >
        <a
          className="sc-cxFLGX hbUEOQ"
          href="/user"
        >
          <div
            className="sc-iwyWTf gzPuJA"
          >
            <img
              className="sc-bBXrwG dvQvNx"
              src="profile-icon.svg"
            />
          </div>
          <div
            className="sc-lmoMya ckTKGG"
          >
            ПРОФИЛЬ
          </div>
        </a>
      </li>
      <li
        className="sc-bZSRNg gnolpL"
      >
        <a
          className="sc-cxFLGX hbUEOQ"
          href="/setting"
        >
          <div
            className="sc-iwyWTf gzPuJA"
          >
            <img
              className="sc-bBXrwG dvQvNx"
              src="setting-icon.svg"
            />
          </div>
          <div
            className="sc-lmoMya ckTKGG"
          >
            НАСТРОЙКИ
          </div>
        </a>
      </li>
      <li
        className="sc-bZSRNg gnolpL"
      >
        <a
          className="sc-cxFLGX hbUEOQ"
          href="/"
        >
          <div
            className="sc-iwyWTf gzPuJA"
          >
            <img
              className="sc-bBXrwG dvQvNx"
              src="sign-out-icon.svg"
            />
          </div>
          <div
            className="sc-lmoMya ckTKGG"
          >
            ВЫХОД
          </div>
        </a>
      </li>
    </ul>
    <div
      className="sc-gWHigU bsjDqX"
    />
  </div>
</div>
`;

exports[`Storyshots TMS/UserMenu Menu Item 1`] = `
<a
  className="sc-cxFLGX hbUEOQ"
  href="/user"
>
  <div
    className="sc-iwyWTf gzPuJA"
  >
    <img
      className="sc-bBXrwG dvQvNx"
      src="profile-icon.svg"
    />
  </div>
  <div
    className="sc-lmoMya ckTKGG"
  >
    ПРОФИЛЬ
  </div>
</a>
`;

exports[`Storyshots Welcome Test Component Example 1`] = `
Array [
  <div>
    helloworld from storybook
  </div>,
  <button
    className="sc-dkIXZx cFdyHh"
  >
    Styled Button
  </button>,
]
`;

exports[`Storyshots Welcome Test Component Example Default 1`] = `
Array [
  <div>
    helloworld
  </div>,
  <button
    className="sc-dkIXZx cFdyHh"
  >
    Styled Button
  </button>,
]
`;
